--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@ h1 {
 
 button {
     /* margin-top: 20px; */
+    margin-top: 20px;
     background-color: yellow;
     padding: 10px;
     border-radius: 5px;
