--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     background-color: aquamarine;
 }
 
-h1 {
+h1 h2 {
     text-align: center;
     color: rgb(227, 252, 7);
     background-color: blue;
