--- a/styles.css
+++ b/styles.css
@@ -19,20 +19,26 @@ h1 h2 {
     background-repeat: no-repeat;
     display: flex;
     /* Enables flexbox layout */
-    flex-direction: column;
     justify-content: center;
     /* Centers contents horizontally */
     align-items: center;
     /* Centers contents vertically */
 }
 
+#writing_container {
+    display: flex;
+    flex-direction: column;
+}
+
 button {
     /* margin-top: 20px; */
-    margin-top: 20px;
-    background-color: yellow;
+    margin-top: 50px;
+    background-color: rgb(255, 203, 61);
     padding: 10px;
-    border-radius: 5px;
+    border-radius: 150%;
+    height: 80px;
     position: absolute;
+    margin-left: 120px;
     left: 50%;
     transform: translate(-50%, -50%);
 }
